--- a/404.html
+++ b/404.html
@@ -1,1 +1,10 @@
-<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="https://www.cances.cf/blog/" homePageName="回到 Cances'Blog"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Warning</title>
+</head>
+<body>
+	<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="https://www.cances.cf/blog/" homePageName="回到 Cances'Blog"></script>
+</body>
+</html>
