--- a/404.html
+++ b/404.html
@@ -5,7 +5,6 @@
 	<title>Warning</title>
 </head>
 <body>
-	<iframe scrolling='no' frameborder='0' src='http://yibo.iyiyun.com/Home/Distribute/ad404/key/1349310' width='654' height='470' style='display:block;'></iframe>
-	<iframe scrolling='no' frameborder='0' src='http://yibo.iyiyun.com/Home/Distribute/ad404/key/1349310' width='654' height='470' style='display:block;'></iframe>
+	<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="https://www.cances.cf/blog/" homePageName="回到 Cances'Blog"></script>
 </body>
 </html>
