--- a/404.html
+++ b/404.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-	<meta charset="UTF-8">
-	<title>Warning</title>
+<meta charset="UTF-8" />
+<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" renderTarget="randerHere" homePageUrl="http://yoursite.com/yourPage.html" homePageName="回到我的主页" async ></script>
 </head>
 <body>
-	<script type="text/javascript" src="//qzonestyle.gtimg.cn/qzone/hybrid/app/404/search_children.js" charset="utf-8" homePageUrl="https://www.cances.cf/blog/" homePageName="回到 Cances'Blog"></script>
+<table width=100% height=100%>
+<tr>
+ <td colspan=3 align=center bgcolor="#eeeee0">上边可以放东西</td>
+</tr>
+<tr>
+ <td bgcolor="#eeeee0">左边可以放东西</td>
+ <td id="randerHere"></td>
+ <td bgcolor="#eeeee0">右边也可以放东西</td>
+</tr>
+<tr>
+ <td colspan=3 align=center bgcolor="#eeeee0">下边也可以放东西</td>
+</tr>
+</table>
 </body>
 </html>
